--- a/meme/Base.lproj/Main.storyboard
+++ b/meme/Base.lproj/Main.storyboard
@@ -16,13 +16,12 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="elh-hN-1Ot" userLabel="Button">
-                                <rect key="frame" x="157.5" y="816" width="99" height="30"/>
-                                <state key="normal" title="Choose Image"/>
-                            </button>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Jrx-jp-4Ov">
+                                <rect key="frame" x="8" y="88" width="398" height="725"/>
+                                <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            </imageView>
                             <textField opaque="NO" contentMode="redraw" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="TOP" textAlignment="center" adjustsFontSizeToFit="NO" minimumFontSize="40" translatesAutoresizingMaskIntoConstraints="NO" id="wwe-GK-KC0">
-                                <rect key="frame" x="176" y="108" width="62.5" height="49.5"/>
-                                <color key="backgroundColor" systemColor="labelColor"/>
+                                <rect key="frame" x="176" y="120" width="62.5" height="49.5"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <fontDescription key="fontDescription" name="HelveticaNeue-CondensedBlack" family="Helvetica Neue" pointSize="40"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="allCharacters"/>
@@ -31,8 +30,7 @@
                                 </connections>
                             </textField>
                             <textField opaque="NO" contentMode="redraw" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="BOTTOM" textAlignment="center" adjustsFontSizeToFit="NO" minimumFontSize="40" translatesAutoresizingMaskIntoConstraints="NO" id="Tdb-sm-v3G">
-                                <rect key="frame" x="139.5" y="718.5" width="135" height="49.5"/>
-                                <color key="backgroundColor" systemColor="labelColor"/>
+                                <rect key="frame" x="139.5" y="731.5" width="135" height="49.5"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <fontDescription key="fontDescription" name="HelveticaNeue-CondensedBlack" family="Helvetica Neue" pointSize="40"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="allCharacters"/>
@@ -40,26 +38,67 @@
                                     <outlet property="delegate" destination="BYZ-38-t0r" id="afG-Ft-pqL"/>
                                 </connections>
                             </textField>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Jrx-jp-4Ov">
-                                <rect key="frame" x="87" y="76" width="240" height="724"/>
-                            </imageView>
+                            <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="center" translatesAutoresizingMaskIntoConstraints="NO" id="wyh-7t-dpp">
+                                <rect key="frame" x="0.0" y="813" width="414" height="49"/>
+                                <items>
+                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="Eos-k3-yqb"/>
+                                    <barButtonItem title="Camera" id="qj5-2I-x0l">
+                                        <connections>
+                                            <action selector="selectFromCamera:" destination="BYZ-38-t0r" id="1GA-ar-B2d"/>
+                                        </connections>
+                                    </barButtonItem>
+                                    <barButtonItem title="Album" id="OYu-AP-SOH">
+                                        <connections>
+                                            <action selector="selectImage:" destination="BYZ-38-t0r" id="rkq-hv-IPY"/>
+                                        </connections>
+                                    </barButtonItem>
+                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="TcZ-no-g3u"/>
+                                </items>
+                            </toolbar>
+                            <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="L4l-W5-rI5">
+                                <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                                <items>
+                                    <navigationItem id="BvM-S4-dHf">
+                                        <barButtonItem key="leftBarButtonItem" title="Share" id="D4l-UG-jC0">
+                                            <connections>
+                                                <action selector="share" destination="BYZ-38-t0r" id="7jo-4i-AJG"/>
+                                            </connections>
+                                        </barButtonItem>
+                                        <barButtonItem key="rightBarButtonItem" title="Cancel" id="GCh-bB-KrL">
+                                            <connections>
+                                                <action selector="resetUI:" destination="BYZ-38-t0r" id="FYf-f3-UdT"/>
+                                            </connections>
+                                        </barButtonItem>
+                                    </navigationItem>
+                                </items>
+                            </navigationBar>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="Jrx-jp-4Ov" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="32" id="DJh-UM-6nF"/>
+                            <constraint firstItem="L4l-W5-rI5" firstAttribute="leading" secondItem="wyh-7t-dpp" secondAttribute="leading" id="3fV-kn-zlD"/>
+                            <constraint firstItem="Jrx-jp-4Ov" firstAttribute="bottom" secondItem="wyh-7t-dpp" secondAttribute="top" id="EG7-xm-i7O"/>
                             <constraint firstItem="Tdb-sm-v3G" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="Evi-WW-xS8"/>
+                            <constraint firstItem="wyh-7t-dpp" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="Fkd-DH-fIH"/>
                             <constraint firstItem="Tdb-sm-v3G" firstAttribute="bottom" secondItem="Jrx-jp-4Ov" secondAttribute="bottom" constant="-32" id="H3R-92-VHZ"/>
-                            <constraint firstItem="elh-hN-1Ot" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="VuA-et-IRP"/>
+                            <constraint firstItem="L4l-W5-rI5" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="IOE-CZ-APg"/>
+                            <constraint firstItem="Jrx-jp-4Ov" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="8" id="Mh1-JO-mET"/>
+                            <constraint firstItem="Jrx-jp-4Ov" firstAttribute="top" secondItem="L4l-W5-rI5" secondAttribute="bottom" id="Vlj-vw-kn2"/>
+                            <constraint firstItem="wwe-GK-KC0" firstAttribute="top" secondItem="Jrx-jp-4Ov" secondAttribute="top" constant="32" id="XDV-7B-2FV"/>
                             <constraint firstItem="Jrx-jp-4Ov" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="YsM-SB-72A"/>
-                            <constraint firstItem="elh-hN-1Ot" firstAttribute="top" secondItem="Jrx-jp-4Ov" secondAttribute="bottom" constant="16" id="bfz-qV-hv5"/>
+                            <constraint firstItem="wyh-7t-dpp" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="c3Z-T5-yO3"/>
                             <constraint firstItem="wwe-GK-KC0" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="jWi-s3-wBf"/>
-                            <constraint firstItem="Jrx-jp-4Ov" firstAttribute="top" secondItem="wwe-GK-KC0" secondAttribute="top" constant="-32" id="niO-3C-M8a"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="elh-hN-1Ot" secondAttribute="bottom" constant="16" id="tDQ-fE-UID"/>
+                            <constraint firstItem="L4l-W5-rI5" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="lKP-en-SZV"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="top" secondItem="L4l-W5-rI5" secondAttribute="top" id="zCk-PR-v46"/>
                         </constraints>
                     </view>
                     <connections>
+                        <outlet property="bottomBar" destination="wyh-7t-dpp" id="DDm-z6-u44"/>
                         <outlet property="bottomText" destination="Tdb-sm-v3G" id="uJn-fw-uve"/>
+                        <outlet property="cameraButton" destination="qj5-2I-x0l" id="oCx-Xi-yzx"/>
+                        <outlet property="imageView" destination="Jrx-jp-4Ov" id="ZYQ-H0-ei0"/>
+                        <outlet property="shareButton" destination="D4l-UG-jC0" id="zAT-5l-kQ5"/>
+                        <outlet property="topBar" destination="L4l-W5-rI5" id="KlS-bg-WCN"/>
                         <outlet property="topText" destination="wwe-GK-KC0" id="kPI-qf-9ax"/>
                     </connections>
                 </viewController>
@@ -69,9 +108,6 @@
         </scene>
     </scenes>
     <resources>
-        <systemColor name="labelColor">
-            <color white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
