--- a/meme/Base.lproj/Main.storyboard
+++ b/meme/Base.lproj/Main.storyboard
@@ -49,7 +49,7 @@
                                     </barButtonItem>
                                     <barButtonItem title="Album" image="photo" catalog="system" id="OYu-AP-SOH">
                                         <connections>
-                                            <action selector="selectImage:" destination="BYZ-38-t0r" id="rkq-hv-IPY"/>
+                                            <action selector="selectFromLibrary:" destination="BYZ-38-t0r" id="a2X-Y3-PX2"/>
                                         </connections>
                                     </barButtonItem>
                                     <barButtonItem style="plain" systemItem="flexibleSpace" id="TcZ-no-g3u"/>
