--- a/meme/Base.lproj/Main.storyboard
+++ b/meme/Base.lproj/Main.storyboard
@@ -20,8 +20,8 @@
                                 <rect key="frame" x="8" y="88" width="398" height="725"/>
                                 <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </imageView>
-                            <textField opaque="NO" contentMode="redraw" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="TOP" textAlignment="center" adjustsFontSizeToFit="NO" minimumFontSize="40" translatesAutoresizingMaskIntoConstraints="NO" id="wwe-GK-KC0">
-                                <rect key="frame" x="176" y="120" width="62.5" height="49.5"/>
+                            <textField opaque="NO" contentMode="redraw" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="TOP" textAlignment="center" minimumFontSize="30" translatesAutoresizingMaskIntoConstraints="NO" id="wwe-GK-KC0">
+                                <rect key="frame" x="8" y="120" width="398" height="49.5"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <fontDescription key="fontDescription" name="HelveticaNeue-CondensedBlack" family="Helvetica Neue" pointSize="40"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="allCharacters"/>
@@ -29,8 +29,8 @@
                                     <outlet property="delegate" destination="BYZ-38-t0r" id="3sg-YF-3P2"/>
                                 </connections>
                             </textField>
-                            <textField opaque="NO" contentMode="redraw" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="BOTTOM" textAlignment="center" adjustsFontSizeToFit="NO" minimumFontSize="40" translatesAutoresizingMaskIntoConstraints="NO" id="Tdb-sm-v3G">
-                                <rect key="frame" x="139.5" y="731.5" width="135" height="49.5"/>
+                            <textField opaque="NO" contentMode="redraw" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="BOTTOM" textAlignment="center" minimumFontSize="30" translatesAutoresizingMaskIntoConstraints="NO" id="Tdb-sm-v3G">
+                                <rect key="frame" x="8" y="731.5" width="398" height="49.5"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <fontDescription key="fontDescription" name="HelveticaNeue-CondensedBlack" family="Helvetica Neue" pointSize="40"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="allCharacters"/>
@@ -87,6 +87,8 @@
                             <constraint firstItem="wwe-GK-KC0" firstAttribute="top" secondItem="Jrx-jp-4Ov" secondAttribute="top" constant="32" id="XDV-7B-2FV"/>
                             <constraint firstItem="Jrx-jp-4Ov" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="YsM-SB-72A"/>
                             <constraint firstItem="wyh-7t-dpp" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="c3Z-T5-yO3"/>
+                            <constraint firstItem="wwe-GK-KC0" firstAttribute="width" secondItem="Jrx-jp-4Ov" secondAttribute="width" id="dXg-kp-jhy"/>
+                            <constraint firstItem="Tdb-sm-v3G" firstAttribute="width" secondItem="Jrx-jp-4Ov" secondAttribute="width" id="hOs-47-F3u"/>
                             <constraint firstItem="wwe-GK-KC0" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="jWi-s3-wBf"/>
                             <constraint firstItem="L4l-W5-rI5" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="lKP-en-SZV"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="top" secondItem="L4l-W5-rI5" secondAttribute="top" id="zCk-PR-v46"/>
