--- a/meme/Base.lproj/Main.storyboard
+++ b/meme/Base.lproj/Main.storyboard
@@ -169,7 +169,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1099" y="89"/>
+            <point key="canvasLocation" x="2043" y="39"/>
         </scene>
         <!--Cusotm Navigation Controller-->
         <scene sceneID="6bo-Rk-fMN">
@@ -254,10 +254,28 @@
                         </connections>
                     </collectionView>
                     <navigationItem key="navigationItem" id="nPH-NO-JaE"/>
+                    <connections>
+                        <outlet property="flowLayout" destination="Gcn-OG-Vkn" id="uyT-Xj-cfO"/>
+                    </connections>
                 </collectionViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="39m-KY-vft" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="78" y="639"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="Al1-MX-BT2">
+            <objects>
+                <viewController id="KlU-K2-AuW" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="Rz6-SK-UJu">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <viewLayoutGuide key="safeArea" id="mei-l2-flr"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Jce-Dx-FA3" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1032" y="39"/>
         </scene>
     </scenes>
     <resources>
