--- a/meme/Base.lproj/Main.storyboard
+++ b/meme/Base.lproj/Main.storyboard
@@ -182,6 +182,9 @@
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
+                    <toolbar key="toolbar" opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="9Y9-ML-AeN">
+                        <autoresizingMask key="autoresizingMask"/>
+                    </toolbar>
                     <connections>
                         <segue destination="xfk-LN-XzJ" kind="relationship" relationship="rootViewController" id="Ywo-vU-6Aa"/>
                     </connections>
@@ -217,8 +220,8 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                        <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="Gcn-OG-Vkn">
-                            <size key="itemSize" width="101" height="101"/>
+                        <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="JZ1-VL-PI9">
+                            <size key="itemSize" width="128" height="128"/>
                             <size key="headerReferenceSize" width="0.0" height="0.0"/>
                             <size key="footerReferenceSize" width="0.0" height="0.0"/>
                             <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
@@ -227,7 +230,7 @@
                             <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="CollectionCell" id="z42-43-QuN" customClass="CollectionViewCell" customModule="meme" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="0.0" width="101" height="101"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="fUn-Zk-cmq">
+                                <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="redraw" insetsLayoutMarginsFromSafeArea="NO" id="fUn-Zk-cmq">
                                     <rect key="frame" x="0.0" y="0.0" width="101" height="101"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
@@ -254,28 +257,40 @@
                         </connections>
                     </collectionView>
                     <navigationItem key="navigationItem" id="nPH-NO-JaE"/>
-                    <connections>
-                        <outlet property="flowLayout" destination="Gcn-OG-Vkn" id="uyT-Xj-cfO"/>
-                    </connections>
                 </collectionViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="39m-KY-vft" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="78" y="639"/>
         </scene>
-        <!--View Controller-->
+        <!--Details View Controller-->
         <scene sceneID="Al1-MX-BT2">
             <objects>
-                <viewController id="KlU-K2-AuW" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="DetailsViewController" id="KlU-K2-AuW" customClass="DetailsViewController" customModule="meme" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="Rz6-SK-UJu">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="ao3-Ck-fFo">
+                                <rect key="frame" x="0.0" y="44" width="414" height="818"/>
+                            </imageView>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="mei-l2-flr"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="ao3-Ck-fFo" firstAttribute="centerX" secondItem="mei-l2-flr" secondAttribute="centerX" id="4B8-CX-T61"/>
+                            <constraint firstItem="ao3-Ck-fFo" firstAttribute="top" secondItem="mei-l2-flr" secondAttribute="top" id="Ilh-zn-evj"/>
+                            <constraint firstItem="ao3-Ck-fFo" firstAttribute="centerY" secondItem="mei-l2-flr" secondAttribute="centerY" id="K2U-0N-wWs"/>
+                            <constraint firstItem="ao3-Ck-fFo" firstAttribute="leading" secondItem="mei-l2-flr" secondAttribute="leading" id="ymq-PP-CzV"/>
+                        </constraints>
                     </view>
+                    <navigationItem key="navigationItem" id="fFE-Qt-w1x"/>
+                    <connections>
+                        <outlet property="imageView" destination="ao3-Ck-fFo" id="bZV-Fn-rEY"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Jce-Dx-FA3" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1032" y="39"/>
+            <point key="canvasLocation" x="1031.8840579710145" y="38.839285714285715"/>
         </scene>
     </scenes>
     <resources>
